k8s/manifests/app-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
  labels:
    app: app-frontend
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend
  template:
    metadata:
      labels:
        app: app-frontend
        component: frontend
    spec:
      containers:
      - name: app-frontend
        image: ghcr.io/doda2025-team8/app-frontend:0.1.1
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
  labels:
    app: app-frontend
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: app-frontend
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
