k8s/manifests/app-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  labels:
    app: app-service
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
        component: backend
    spec:
      containers:
      - name: app-service
        image: ghcr.io/doda2025-team8/app-service:0.0.7
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app-service
    component: backend
spec:
  type: ClusterIP
  selector:
    app: app-service
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
